--- a/public/manifest.json
+++ b/public/manifest.json
@@ -44,7 +44,7 @@
     }
   ],
   "theme_color": "#ffffff",
-  "background_color": "#ffffff",
+  "background_color": "#6666ff",
   "start_url": ".",
   "display": "standalone"
 }
